# mutexcc

./: .gitignore  LICENSE  README.md  install.sh  mutexcc.py  pyproject.toml
tests/: test_cli.py  test_mcp_serve.py  test_release.py
