[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "mutexcc"
version = "1.0.0"
description = "A local mutex for Claude Code agents — makes parallel agents wait their turn on shared files, folders, and git trees."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "august", email = "august@ambra911.com" }]
keywords = ["claude-code", "mutex", "lock", "mcp", "agents", "concurrency"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = []  # stdlib only, on purpose

[project.urls]
Homepage = "https://github.com/august/mutexcc"

[project.scripts]
mutexcc = "mutexcc:main"

[tool.setuptools]
py-modules = ["mutexcc"]
